airflow/logs/dag_id=weather_pipeline_orchestration/run_id=scheduled__2025-09-25T11_45_00+00_00/task_id=verify_docker_services/attempt=1.log
[2025-09-25T12:00:02.833+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-09-25T12:00:02.841+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_pipeline_orchestration.verify_docker_services scheduled__2025-09-25T11:45:00+00:00 [queued]>
[2025-09-25T12:00:02.845+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_pipeline_orchestration.verify_docker_services scheduled__2025-09-25T11:45:00+00:00 [queued]>
[2025-09-25T12:00:02.845+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2025-09-25T12:00:02.850+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): verify_docker_services> on 2025-09-25 11:45:00+00:00
[2025-09-25T12:00:02.856+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:62 DeprecationWarning: This process (pid=11785) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2025-09-25T12:00:02.855+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'weather_pipeline_orchestration', 'verify_docker_services', 'scheduled__2025-09-25T11:45:00+00:00', '--job-id', '96', '--raw', '--subdir', 'DAGS_FOLDER/weather_pipeline_orchestration.py', '--cfg-path', '/tmp/tmpcn48hlk_']
[2025-09-25T12:00:02.857+0000] {standard_task_runner.py:64} INFO - Started process 11786 to run task
[2025-09-25T12:00:02.857+0000] {standard_task_runner.py:91} INFO - Job 96: Subtask verify_docker_services
[2025-09-25T12:00:02.885+0000] {task_command.py:426} INFO - Running <TaskInstance: weather_pipeline_orchestration.verify_docker_services scheduled__2025-09-25T11:45:00+00:00 [running]> on host 791fb6ea4f60
[2025-09-25T12:00:02.906+0000] {abstractoperator.py:725} ERROR - Exception rendering Jinja template for task 'verify_docker_services', field 'bash_command'. Template: '\n        echo "🔍 Checking Docker services..."\n        docker ps --filter "name=kafka" --format "Kafka: {{.Status}}"\n        docker ps --filter "name=namenode" --format "NameNode: {{.Status}}"\n        docker ps --filter "name=data-producer" --format "Producer: {{.Status}}"\n        echo "✅ Docker services check completed"\n        '
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 3, in template
jinja2.exceptions.TemplateSyntaxError: unexpected '.'
[2025-09-25T12:00:02.908+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2479, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode, session=session)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2633, in _execute_task_with_callbacks
    task_orig = self.render_templates(context=context, jinja_env=jinja_env)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3094, in render_templates
    original_task.render_template_fields(context, jinja_env)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 1337, in render_template_fields
    self._do_render_template_fields(self, self.template_fields, context, jinja_env, set())
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 3, in template
jinja2.exceptions.TemplateSyntaxError: unexpected '.'
[2025-09-25T12:00:02.912+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=weather_pipeline_orchestration, task_id=verify_docker_services, run_id=scheduled__2025-09-25T11:45:00+00:00, execution_date=20250925T114500, start_date=20250925T120002, end_date=20250925T120002
[2025-09-25T12:00:02.917+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 96 for task verify_docker_services (unexpected '.'; 11786)
[2025-09-25T12:00:02.958+0000] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2025-09-25T12:00:02.971+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-09-25T12:00:02.972+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
